@@ -55,8 +55,12 @@ public final class DNSIncoming extends DNSMessage {
             return this.read();
         }
 
+        public int readUnsignedByte() {
+            return (this.read() & 0xFF);
+        }
+
         public int readUnsignedShort() {
-            return (this.read() << 8) | this.read();
+            return (this.readUnsignedByte() << 8) | this.readUnsignedByte();
         }
 
         public int readInt() {
@@ -72,7 +76,7 @@ public final class DNSIncoming extends DNSMessage {
         public String readUTF(int len) {
             StringBuilder buffer = new StringBuilder(len);
             for (int index = 0; index < len; index++) {
-                int ch = this.read();
+                int ch = this.readUnsignedByte();
                 switch (ch >> 4) {
                     case 0:
                     case 1:
@@ -87,18 +91,18 @@ public final class DNSIncoming extends DNSMessage {
                     case 12:
                     case 13:
                         // 110x xxxx 10xx xxxx
-                        ch = ((ch & 0x1F) << 6) | (this.read() & 0x3F);
+                        ch = ((ch & 0x1F) << 6) | (this.readUnsignedByte() & 0x3F);
                         index++;
                         break;
                     case 14:
                         // 1110 xxxx 10xx xxxx 10xx xxxx
-                        ch = ((ch & 0x0f) << 12) | ((this.read() & 0x3F) << 6) | (this.read() & 0x3F);
+                        ch = ((ch & 0x0f) << 12) | ((this.readUnsignedByte() & 0x3F) << 6) | (this.readUnsignedByte() & 0x3F);
                         index++;
                         index++;
                         break;
                     default:
                         // 10xx xxxx, 1111 xxxx
-                        ch = ((ch & 0x3F) << 4) | (this.read() & 0x0f);
+                        ch = ((ch & 0x3F) << 4) | (this.readUnsignedByte() & 0x0f);
                         index++;
                         break;
                 }
@@ -116,7 +120,7 @@ public final class DNSIncoming extends DNSMessage {
             StringBuilder buffer = new StringBuilder();
             boolean finished = false;
             while (!finished) {
-                int len = this.read();
+                int len = this.readUnsignedByte();
                 if (len == 0) {
                     finished = true;
                     break;
@@ -132,7 +136,7 @@ public final class DNSIncoming extends DNSMessage {
                         names.put(Integer.valueOf(offset), new StringBuilder(label));
                         break;
                     case Compressed:
-                        int index = (DNSLabel.labelValue(len) << 8) | this.read();
+                        int index = (DNSLabel.labelValue(len) << 8) | this.readUnsignedByte();
                         String compressedLabel = _names.get(Integer.valueOf(index));
                         if (compressedLabel == null) {
                             logger1.severe("bad domain name: possible circular name detected. Bad offset: 0x" + Integer.toHexString(index) + " at 0x" + Integer.toHexString(pos - 2));
@@ -160,7 +164,7 @@ public final class DNSIncoming extends DNSMessage {
         }
 
         public String readNonNameString() {
-            int len = this.read();
+            int len = this.readUnsignedByte();
             return this.readUTF(len);
         }
 
@@ -198,6 +202,17 @@ public final class DNSIncoming extends DNSMessage {
             int numAnswers = _messageInputStream.readUnsignedShort();
             int numAuthorities = _messageInputStream.readUnsignedShort();
             int numAdditionals = _messageInputStream.readUnsignedShort();
+
+            if (logger.isLoggable(Level.FINER)) {
+                logger.finer("DNSIncoming() questions:" + numQuestions + " answers:" + numAnswers + " authorities:" + numAuthorities + " additionals:" + numAdditionals);
+            }
+
+            // We need some sanity checks
+            // A question is at least 5 bytes and answer 11 so check what we have
+
+            if ((numQuestions * 5 + (numAnswers + numAuthorities + numAdditionals) * 11) > packet.getLength()) {
+                throw new IOException("questions:" + numQuestions + " answers:" + numAnswers + " authorities:" + numAuthorities + " additionals:" + numAdditionals);
+            }
 
             // parse questions
             if (numQuestions > 0) {
